--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div class="text">
 						<h1> BunBun Bakery Shop </h1>	
 					</div>
-					<form class="typead" action="hw5product.html" >
+					<form class="typead" action="hw6a.html" >
 							<label for="address"></label><br>
 							<input type="text" id="address" name="address" value="Enter Address"><br>
 							<button type="submit" value="Go Cinnamon!">Go Cinnamon!</button>  
